--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>mycollege</title>
+  <title>daya</title>
 
 
 <style>
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>welcome to daya-trilochan node class</h1>
+            <h1>daya</h1>
           </hgroup>
 <p>I love my college.</p>
 
